# Bili23-Downloader

./: .gitattributes  .gitignore  CHANGELOG  CHANGELOG.md  CHANGELOG_EN.md  GUI.py  LICENSE  README.md  README_en.md  TECHNICAL_DOCUMENTATION.md  TIMESTAMP_ANALYSIS.md  YOUTUBE_COLLECTION_FIX.md  YOUTUBE_PLAYLIST_LARGE_FIX.md  YT_DLP_INTEGRATION_GUIDE.md  YT_DLP_UPGRADE_GUIDE.md  _debug_subtitle.py  _pystand_static.int  benchmark_test.py  bilidanmu.proto  build.bat  config.conf  config.ini  cookies.txt  info.json  issues.md  pyproject.toml  requirements.txt  setup.iss  setup_ffmpeg.py  setup_node.py  test_api_fields.py  test_api_pagination.py  test_collection_debug.py  test_fix_verification.py  test_integration.py  test_large_playlist.py  test_node_runtime.py  test_playlist_final.py  test_progress_format.py  test_timestamp.py  (+15 more)
.github/: FUNDING.yml
assets/: app.icns  setup.iss
cloudflare-worker/: index.js
doc/: index.md  package-lock.json  package.json  project.json
docs/: cli.md
gui/: __init__.py  about.py  converter.py  cover_viewer.py  debug.py  download.py  ffmpeg_detect.py  info.py  license.py  login.py  main.py  notification.py  processing.py  settings.py  show_error.py  taskbar.py  template.py  templates.py  update.py  user.py
info/: bangumi_info.html  bangumi_style.css  video_info.html  video_style.css
preview_info/: bangumi_style.css  video_style.css
scripts/: test.js  translate.py
src/: GUI.py  cli.py  config.ini  main.py  updater.py
update/: CHANGELOG_1400  update.json
utils/: __init__.py  activity.py  api.py  audio.py  bangumi.py  check.py  cheese.py  config.py  cookie.py  download.py  error.py  html.py  icons.py  info.py  live.py  login.py  (+3 more)
(+674 files in other folders)
