[project]
name = "bili23-downloader"
version = "2.10.1"
description = "开源、免费、跨平台的 B 站视频下载工具，支持多线程加速、音视频分离、弹幕元数据获取、自定义命名与分类等功能。Open Source, Free, Cross-Platform Bilibili Video Downloader."
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.9"
dependencies = [
    "PySide6==6.10.3",
    "PySide6-Fluent-Widgets==1.11.2",
    "orjson==3.11.9",
    "qrcode==8.2",
    "protobuf==7.35.1",
    "httpx==0.28.1",
    "psutil==7.2.2",
]
authors = [
    {name = "ScottSloan", email = "world1019@sina.com"},
]
encoding = "utf-8"